fix vertical alignment of search input in edit members dialog [finishes #23362449]

--- a/scss/modals/_manage_join_tables.scss
+++ b/scss/modals/_manage_join_tables.scss
@@ -98,6 +98,7 @@
 
     .sub_header {
         .chorus_search_container {
+            margin-top: 5px;
             float: right;
             width: 250px;
             display: inline-block;
